<resources>
    <string name="app_name">Eatmore App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_or_username">Enter email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_google">Continue with Google</string>
</resources>