<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bkg"
        tools:context=".SignInActivity">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ellipse_pizza"
                android:layout_width="559dp"
                android:layout_height="564dp"
                android:layout_marginStart="-100dp"
                android:layout_marginTop="-300dp"
                android:layout_marginEnd="-60dp"
                android:src="@drawable/ellips_pizza" />

            <ImageView
                android:layout_width="178dp"
                android:layout_height="79dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="65dp"
                android:src="@drawable/eatmore_logo" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="350dp"
            android:layout_height="450dp"
            android:layout_marginTop="-250dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/log_in"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="22sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/enter_email_or_username"
                    android:inputType="text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/forget_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_red"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bkg"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/or"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/log_in_google"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:background="@drawable/google_bkg">

                    <ImageView
                        android:id="@+id/logo_img"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/google_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/logo_img"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/continue_with_google"
                        android:textSize="18sp" />



                </RelativeLayout>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="235dp"
            android:layout_height="225dp"
            android:layout_marginEnd="-20dp"
            android:layout_marginBottom="-130dp"
            android:src="@drawable/salad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>